--- a/package.json
+++ b/package.json
@@ -9,11 +9,26 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "@types/mathjs": "^5.0.1",
+    "@types/nprogress": "0.0.29",
+    "@types/qs": "^6.5.2",
+    "@types/swiper": "^4.4.2",
+    "animate.css": "^3.7.0",
+    "axios": "^0.18.0",
+    "echarts": "^4.1.0",
+    "element-ui": "^2.6.2",
+    "mathjs": "^5.8.0",
+    "moment": "^2.24.0",
+    "normalize.css": "^8.0.1",
+    "nprogress": "^0.2.0",
+    "screenfull": "^4.1.0",
+    "swiper": "^4.5.0",
     "vue": "^2.6.6",
     "vue-class-component": "^6.0.0",
     "vue-property-decorator": "^7.0.0",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vuex-class": "^0.3.2"
   },
   "devDependencies": {
     "@types/chai": "^4.1.0",
@@ -24,11 +39,14 @@
     "@vue/cli-service": "^3.5.0",
     "@vue/test-utils": "1.0.0-beta.29",
     "chai": "^4.1.2",
+    "compression-webpack-plugin": "^2.0.0",
     "fibers": "^3.1.1",
     "sass": "^1.17.2",
     "sass-loader": "^7.1.0",
+    "sass-resources-loader": "^2.0.0",
     "typescript": "^3.2.1",
-    "vue-template-compiler": "^2.5.21"
+    "vue-template-compiler": "^2.5.21",
+    "webpack-bundle-analyzer": "^3.1.0"
   },
   "postcss": {
     "plugins": {
