--- a/package.json
+++ b/package.json
@@ -9,46 +9,47 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "@types/echarts": "^4.1.8",
+    "@types/echarts": "^4.1.9",
     "@types/mathjs": "^5.0.1",
     "@types/nprogress": "0.0.29",
-    "@types/qs": "^6.5.2",
+    "@types/qs": "^6.5.3",
     "@types/screenfull": "^4.1.0",
     "@types/swiper": "^4.4.2",
     "animate.css": "^3.7.0",
     "axios": "^0.18.0",
-    "echarts": "^4.1.0",
-    "element-ui": "^2.6.2",
-    "mathjs": "^5.8.0",
+    "echarts": "^4.2.1",
+    "element-ui": "^2.8.2",
+    "mathjs": "^5.10.0",
     "moment": "^2.24.0",
     "normalize.css": "^8.0.1",
     "nprogress": "^0.2.0",
-    "screenfull": "^4.1.0",
+    "screenfull": "^4.2.0",
     "swiper": "^4.5.0",
-    "vue": "^2.6.6",
-    "vue-class-component": "^6.0.0",
-    "vue-property-decorator": "^7.0.0",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
+    "vue": "^2.6.10",
+    "vue-class-component": "^7.1.0",
+    "vue-property-decorator": "^8.1.1",
+    "vue-router": "^3.0.6",
+    "vuex": "^3.1.1",
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.0",
-    "@types/mocha": "^5.2.4",
-    "@vue/cli-plugin-babel": "^3.5.0",
-    "@vue/cli-plugin-typescript": "^3.5.0",
-    "@vue/cli-plugin-unit-mocha": "^3.5.0",
-    "@vue/cli-service": "^3.5.0",
+    "@types/chai": "^4.1.7",
+    "@types/mocha": "^5.2.6",
+    "@vue/cli-plugin-babel": "^3.7.0",
+    "@vue/cli-plugin-typescript": "^3.7.0",
+    "@vue/cli-plugin-unit-mocha": "^3.7.0",
+    "@vue/cli-service": "^3.7.0",
     "@vue/test-utils": "1.0.0-beta.29",
-    "chai": "^4.1.2",
+    "chai": "^4.2.0",
     "compression-webpack-plugin": "^2.0.0",
-    "fibers": "^3.1.1",
-    "sass": "^1.17.2",
+    "fibers": "^4.0.1",
+    "sass": "^1.20.1",
     "sass-loader": "^7.1.0",
     "sass-resources-loader": "^2.0.0",
-    "typescript": "^3.2.1",
-    "vue-template-compiler": "^2.5.21",
-    "webpack-bundle-analyzer": "^3.1.0"
+    "script-ext-html-webpack-plugin": "^2.1.3",
+    "typescript": "^3.4.5",
+    "vue-template-compiler": "^2.6.10",
+    "webpack-bundle-analyzer": "^3.3.2"
   },
   "postcss": {
     "plugins": {
