--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-pageUrl = '/'
+VUE_APP_PAGE_URL = 'xhbicyCletest'
 
 VUE_APP_API_URL = '/sharebikesclean'
 
-VUE_APP_IMG_URL = "http://106.14.198.128:18088"
+// VUE_APP_IMG_URL = "http://106.14.198.128:18088"
+
+VUE_APP_IMG_URL = "http://10.1.30.202:18088"
