--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@vue/cli-plugin-typescript": "^3.7.0",
     "@vue/cli-plugin-unit-mocha": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
+    "@vue/eslint-config-prettier": "^4.0.1",
     "@vue/test-utils": "1.0.0-beta.29",
     "chai": "^4.2.0",
     "compression-webpack-plugin": "^2.0.0",
