对接页面配置接口

--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,7 @@
+NODE_ENV = 'production'
+
 VUE_APP_PAGE_URL = 'xhbicyCletest'
 
 VUE_APP_API_URL = '/sharebikesclean'
-
-// VUE_APP_IMG_URL = "http://106.14.198.128:18088"
 
 VUE_APP_IMG_URL = "http://10.1.30.202:18088"
