图片模糊 放到静态文件夹

--- a/package.json
+++ b/package.json
@@ -28,20 +28,22 @@
     "vuex-class": "^0.3.2"
   },
   "devDependencies": {
+    "@babel/polyfill": "^7.4.4",
+    "@types/chai": "^4.1.7",
     "@types/echarts": "^4.1.9",
     "@types/mathjs": "^5.0.1",
+    "@types/mocha": "^5.2.6",
     "@types/nprogress": "0.0.29",
     "@types/qs": "^6.5.3",
     "@types/screenfull": "^4.1.0",
     "@types/swiper": "^4.4.2",
-    "@types/chai": "^4.1.7",
-    "@types/mocha": "^5.2.6",
     "@vue/cli-plugin-babel": "^3.7.0",
     "@vue/cli-plugin-typescript": "^3.7.0",
     "@vue/cli-plugin-unit-mocha": "^3.7.0",
     "@vue/cli-service": "^3.7.0",
     "@vue/eslint-config-prettier": "^4.0.1",
     "@vue/test-utils": "1.0.0-beta.29",
+    "babel-plugin-transform-remove-console": "^6.9.4",
     "chai": "^4.2.0",
     "compression-webpack-plugin": "^2.0.0",
     "fibers": "^4.0.1",
